[refactoring] CronCompetitionUpdater change some basic things